# hackathon25

./: .gitignore  README.md  openApi.json  package-lock.json  package.json
backend/: config.toml  logs.json  pyproject.toml
backend/cms/answers/: exceptions.py  models.py  repository.py  views.py
backend/cms/answers/migrations/: 202507120825_init.py
backend/cms/app/: app.py  lifespan.py  middlewares.py  server.py
backend/cms/auth/: dependency.py  exception_handler.py  exceptions.py  models.py  views.py
backend/cms/notifications/: repository.py
backend/cms/notifications/migrations/: 202507121013_initial.py
backend/cms/questions/: exceptions.py  models.py  repository.py  views.py
backend/cms/questions/migrations/: 202507120731_initial.py
backend/cms/stats/: views.py
backend/cms/users/: exceptions.py  models.py  repository.py  views.py
backend/cms/users/migrations/: 202506121032_initial.py
backend/cms/utils/: argon2.py  config.py  exceptions.py  logging.py  metions.py  migrations.py  postgres.py
src/: App.jsx  index.css  main.jsx
src/components/: AnswerCard.jsx  Button.jsx  Card.jsx  DialogContent.jsx  Input.jsx  Label.jsx  LoginModal.jsx  MentionList.jsx  Navbar.jsx  NotificationDropdown.jsx  QuestionCard.jsx  RichTextEditor.jsx  SignUpModal.jsx  TagSelector.jsx
src/context/: QAContext.jsx  UserContext.jsx  ViewQuestionPage.jsx
src/pages/: AskQuestionPage.jsx  HomePage.jsx  ProfilePage.jsx  QuestionDetailPage.jsx
